Fix: roulette item alignment

--- a/scss/modules/_roulette.scss
+++ b/scss/modules/_roulette.scss
@@ -14,7 +14,7 @@
     }
     &__item-footer {
         font-weight: bolder;
-        font-size: 1.2rem;
+        font-size: 1rem;
         max-width: 100%;
         white-space: normal;
         overflow: hidden;
